[package]
name = "explore-avro"
version = "0.3.0"
authors = ["Félix Saparelli <felix@passcod.name>", "Guy Waldman <guywald1@gmail.com>"]
edition = "2021"

[dependencies]
apache-avro = { version = "0.17.0", features = ["bzip", "snappy", "xz", "zstandard"] }
avro-rs = "0.6"
clap = { version = "4.5.21", features = ["derive", "cargo"] }
csv = "1.3.1"
glob = "0.3.1"
jiff = "0.1.14"
miette = "7.4.0"
num-bigint = "0.4.6"
prettytable-rs = "0.10.0"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
